Update web.config for security.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -8,7 +8,7 @@
 	
 	<connectionStrings>
 		<remove name="longueurConnectionString"/>
-		<add name="longueurConnectionString" connectionString="Data Source=adam-win;Initial Catalog=Longueur;Integrated Security=True"/>
+		<add name="longueurConnectionString" connectionString="Data Source=Stinky;Initial Catalog=Longueur;Integrated Security=True"/>
 	</connectionStrings>
 	
 	<system.web>
@@ -22,13 +22,17 @@
 			<error statusCode="403" redirect="oops.html" />
 			<error statusCode="404" redirect="oops.html" />
 		</customErrors>
+
+    <trace enabled="true" localOnly="true" />
+    <httpCookies httpOnlyCookies="true" />
+    <sessionState cookieless="AutoDetect" />
 		
 		<httpModules>
 			<add name="MagicAjax" type="MagicAjax.MagicAjaxModule, MagicAjax"/>
 		</httpModules>
 		
 		<authentication	mode="Forms">
-			<forms name="Fookie" loginUrl="login.aspx" protection="All" path="/" />
+			<forms name="Fookie" loginUrl="login.aspx" protection="All" path="/" cookieless="UseCookies" />
 		</authentication>
 		<authorization>
 			<allow users="*"/>
