--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <DeployConfig>
-  <CompilationMode>InPlaceCompilation</CompilationMode>
   <SavePassword>true</SavePassword>
   <FtpServerOs>215 UNIX Type: L8</FtpServerOs>
   <FtpServerType>Serv-U FTP-Server v2.5i for WinSock ...</FtpServerType>
   <Validated>true</Validated>
-  <MsFtpUserPre>false</MsFtpUserPre>
   <StringReplacements>
     <StringReplacement>
       <FilePattern>\Web.Config</FilePattern>
@@ -52,6 +50,16 @@
       <LookFor>Data Source=adam-win;Initial Catalog=Longueur;Integrated Security=True</LookFor>
       <ReplaceWith>Data Source=sql331.mysite4now.com;Initial Catalog=longueur;Persist Security Info=True;User ID=adparadox;Password=_S1mpl3n3ss</ReplaceWith>
     </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\Web.Config</FilePattern>
+      <LookFor>Data Source=Stinky;Initial Catalog=Longueur;Integrated Security=True</LookFor>
+      <ReplaceWith>Data Source=sql331.mysite4now.com;Initial Catalog=longueur;Persist Security Info=True;User ID=adparadox;Password=_S1mpl3n3ss</ReplaceWith>
+    </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\Web.Config</FilePattern>
+      <LookFor>&lt;trace enabled="true" localOnly="true" /&gt;</LookFor>
+      <ReplaceWith>&lt;trace enabled="false" /&gt;</ReplaceWith>
+    </StringReplacement>
   </StringReplacements>
   <FtpPort>21</FtpPort>
   <FtpTimeout>20</FtpTimeout>
@@ -71,7 +79,6 @@
     <Filter>*.gz</Filter>
     <Filter>*\Sql</Filter>
   </IgnoreFilters>
-  <UploadAssemblyWhenCs>true</UploadAssemblyWhenCs>
   <UploadLog>
     <item>
       <key>
@@ -102,7 +109,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:08.8142432-04:00</dateTime>
+        <dateTime>2007-07-22T16:06:00.8616976-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -254,7 +261,7 @@
         <string>\web.config</string>
       </key>
       <value>
-        <dateTime>2007-07-21T14:52:14.3920016-04:00</dateTime>
+        <dateTime>2007-07-22T16:34:52.3094-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -334,7 +341,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-07-21T15:20:40.387944-04:00</dateTime>
+        <dateTime>2007-07-22T16:39:32.7612912-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -542,7 +549,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:08.9143872-04:00</dateTime>
+        <dateTime>2007-07-22T16:06:00.9418128-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -566,7 +573,7 @@
         <string>\app_code\data\base.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:15.994568-04:00</dateTime>
+        <dateTime>2007-07-22T16:06:01.9132096-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -670,7 +677,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-07-21T15:23:33.7984688-04:00</dateTime>
+        <dateTime>2007-07-22T16:39:33.1418384-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -838,7 +845,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-07-21T15:20:47.0074624-04:00</dateTime>
+        <dateTime>2007-07-22T16:39:35.8957984-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5326,7 +5333,7 @@
         <string>\thehillellis\js</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:28:00.6593616-04:00</dateTime>
+        <dateTime>2007-07-22T16:39:33.2519968-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5342,7 +5349,7 @@
         <string>\thehillellis\js\thehillellis.js</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:28:02.922616-04:00</dateTime>
+        <dateTime>2007-07-22T16:39:35.1947904-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5454,7 +5461,7 @@
         <string>\controls\blog</string>
       </key>
       <value>
-        <dateTime>2007-07-21T15:20:40.5481744-04:00</dateTime>
+        <dateTime>2007-07-22T16:39:32.8414064-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5462,7 +5469,7 @@
         <string>\controls\blog\archives.ascx</string>
       </key>
       <value>
-        <dateTime>2007-07-21T15:20:42.3006944-04:00</dateTime>
+        <dateTime>2007-07-22T16:39:34.2934944-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5639,5 +5646,5 @@
   <FtpUserID>adparadox</FtpUserID>
   <FtpPassword>Me1Vd3c1M4Q=</FtpPassword>
   <FtpPassive>true</FtpPassive>
-  <FtpRemotePath>/c:/hosting/webhost4life/member/adparadox</FtpRemotePath>
+  <FtpRemotePath />
 </DeployConfig>
