Finish tags. Fix alpha png issue for IE 5.5/6.0.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -25,7 +25,7 @@
 
     <trace enabled="true" localOnly="true" />
     <httpCookies httpOnlyCookies="true" />
-    <sessionState cookieless="AutoDetect" />
+    <sessionState cookieless="false" />
 		
 		<httpModules>
 			<add name="MagicAjax" type="MagicAjax.MagicAjaxModule, MagicAjax"/>
