--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -109,7 +109,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-07-22T16:06:00.8616976-04:00</dateTime>
+        <dateTime>2007-08-14T20:41:23.3993328-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -245,7 +245,7 @@
         <string>\global.asax</string>
       </key>
       <value>
-        <dateTime>2007-07-21T15:20:44.3035744-04:00</dateTime>
+        <dateTime>2007-08-14T20:39:14.9271504-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -261,7 +261,7 @@
         <string>\web.config</string>
       </key>
       <value>
-        <dateTime>2007-07-22T16:34:52.3094-04:00</dateTime>
+        <dateTime>2007-08-14T20:39:15.8484752-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -341,7 +341,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-07-22T16:39:32.7612912-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:45.5311568-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -549,7 +549,7 @@
         <string>\app_code\data</string>
       </key>
       <value>
-        <dateTime>2007-07-22T16:06:00.9418128-04:00</dateTime>
+        <dateTime>2007-08-14T20:41:23.4894624-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -645,7 +645,7 @@
         <string>\app_code\data\blog</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:09.0445744-04:00</dateTime>
+        <dateTime>2007-08-14T20:41:23.5695776-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -653,7 +653,7 @@
         <string>\app_code\domain</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:10.336432-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:44.5697744-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -661,7 +661,7 @@
         <string>\app_code\domain\blog</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:10.4465904-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:44.6799328-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -677,7 +677,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-07-22T16:39:33.1418384-04:00</dateTime>
+        <dateTime>2007-08-14T22:05:25.5710176-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -685,7 +685,7 @@
         <string>\thehillellis\images</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:05:30.628112-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:46.762928-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -709,7 +709,7 @@
         <string>\app_code\data\blog\iblog.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:11.688376-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:48.4052896-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -717,7 +717,7 @@
         <string>\app_code\data\blog\slog.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:08:34.2521504-04:00</dateTime>
+        <dateTime>2007-08-14T20:41:24.2806-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -725,7 +725,7 @@
         <string>\app_code\data\blog\thehillellis.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:12.389384-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:49.1062976-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -749,7 +749,7 @@
         <string>\app_code\domain\blog\entry.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:08.5265376-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:54.1134976-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -845,7 +845,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-07-22T16:39:35.8957984-04:00</dateTime>
+        <dateTime>2007-08-14T22:05:29.28636-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -853,7 +853,7 @@
         <string>\thehillellis\thehillellis.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-07-21T15:23:34.3993328-04:00</dateTime>
+        <dateTime>2007-08-14T21:38:59.3395744-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5333,7 +5333,7 @@
         <string>\thehillellis\js</string>
       </key>
       <value>
-        <dateTime>2007-07-22T16:39:33.2519968-04:00</dateTime>
+        <dateTime>2007-08-14T22:05:25.9916224-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5349,7 +5349,7 @@
         <string>\thehillellis\js\thehillellis.js</string>
       </key>
       <value>
-        <dateTime>2007-07-22T16:39:35.1947904-04:00</dateTime>
+        <dateTime>2007-08-14T22:05:28.485208-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5389,7 +5389,7 @@
         <string>\app_code\domain\blog\entries</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:02.9385024-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:44.7900912-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5397,7 +5397,7 @@
         <string>\app_code\domain\blog\entries\adamentries.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:05.932808-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:51.269408-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5405,7 +5405,7 @@
         <string>\app_code\domain\blog\entries\baseentries.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:06.533672-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:51.9103296-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5413,7 +5413,7 @@
         <string>\app_code\domain\blog\entries\entriesfactory.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:07.23468-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:52.6113376-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5421,7 +5421,7 @@
         <string>\app_code\domain\blog\entries\lynnentries.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:07.835544-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:53.3123456-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5445,7 +5445,7 @@
         <string>\thehillellis\archive.aspx</string>
       </key>
       <value>
-        <dateTime>2007-06-02T17:21:23.0005248-04:00</dateTime>
+        <dateTime>2007-08-14T20:39:07.9471136-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5453,7 +5453,7 @@
         <string>\thehillellis\archive.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-07-21T15:20:44.994568-04:00</dateTime>
+        <dateTime>2007-08-14T20:39:08.6180784-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5461,7 +5461,7 @@
         <string>\controls\blog</string>
       </key>
       <value>
-        <dateTime>2007-07-22T16:39:32.8414064-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:45.611272-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5469,7 +5469,7 @@
         <string>\controls\blog\archives.ascx</string>
       </key>
       <value>
-        <dateTime>2007-07-22T16:39:34.2934944-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:55.7158016-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5477,7 +5477,7 @@
         <string>\controls\blog\archives.ascx.cs</string>
       </key>
       <value>
-        <dateTime>2007-07-21T15:20:43.0017024-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:56.6170976-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5485,7 +5485,7 @@
         <string>\controls\blog\content.ascx</string>
       </key>
       <value>
-        <dateTime>2007-07-21T15:20:43.6025664-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:57.428264-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5493,7 +5493,7 @@
         <string>\controls\blog\content.ascx.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:23:17.61236-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:58.3195456-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5525,7 +5525,7 @@
         <string>\thehillellis\css</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:28:00.2387568-04:00</dateTime>
+        <dateTime>2007-08-14T22:05:25.6611472-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5533,7 +5533,7 @@
         <string>\thehillellis\css\themes</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:03.9499568-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:46.4324528-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5549,7 +5549,7 @@
         <string>\thehillellis\css\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:28:01.6307584-04:00</dateTime>
+        <dateTime>2007-08-14T22:05:26.9930624-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5557,7 +5557,7 @@
         <string>\thehillellis\css\themes\minimal.css</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:10.73972-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:59.1206976-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5565,7 +5565,7 @@
         <string>\thehillellis\css\themes\spring.css</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:13:11.340584-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:59.8217056-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5597,7 +5597,7 @@
         <string>\app_code\data\dal</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:09.6754816-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:44.2392992-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5613,7 +5613,7 @@
         <string>\app_code\data\dal\dbhelper.cs</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:13.991688-04:00</dateTime>
+        <dateTime>2007-08-14T20:38:50.3580976-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5638,6 +5638,46 @@
       </key>
       <value>
         <dateTime>2007-06-24T23:09:16.7055904-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\domain\blog\tag.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-08-14T20:38:54.9146496-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\images\logo_2.png</string>
+      </key>
+      <value>
+        <dateTime>2007-08-14T20:39:05.3233408-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\tagged.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-08-14T21:07:34.343632-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\tagged.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-08-14T20:54:38.8315232-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\thehillellis\js\fixpng.js</string>
+      </key>
+      <value>
+        <dateTime>2007-08-14T22:05:27.7842-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
