Fix a bug where Tags weren't getting inserted/updated correctly.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -277,7 +277,7 @@
         <string>\admin</string>
       </key>
       <value>
-        <dateTime>2007-08-19T22:33:02.1864784-04:00</dateTime>
+        <dateTime>2007-08-20T23:19:36.6968848-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -469,7 +469,7 @@
         <string>\admin\slog.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-08-19T22:16:46.9746048-04:00</dateTime>
+        <dateTime>2007-08-20T23:19:38.8900384-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -701,7 +701,7 @@
         <string>\admin\thehillellis.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-08-19T22:16:48.3766208-04:00</dateTime>
+        <dateTime>2007-08-20T23:19:39.9515648-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5678,6 +5678,46 @@
       </key>
       <value>
         <dateTime>2007-08-14T22:05:27.7842-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\sql</string>
+      </key>
+      <value>
+        <dateTime>2007-08-20T23:19:37.427936-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\sql\create scripts</string>
+      </key>
+      <value>
+        <dateTime>2007-08-20T23:19:37.6883104-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\sql\create scripts\stored procedures</string>
+      </key>
+      <value>
+        <dateTime>2007-08-20T23:19:37.9486848-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\sql\create scripts\stored procedures\usp_thehillellisinsert.sql</string>
+      </key>
+      <value>
+        <dateTime>2007-08-20T23:19:40.882904-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\sql\create scripts\stored procedures\usp_thehillellisupdate.sql</string>
+      </key>
+      <value>
+        <dateTime>2007-08-20T23:19:41.583912-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
