Add rewrite rules for permalink entries.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -1,5 +1,9 @@
 <?xml version="1.0"?>
 <configuration xmlns="http://schemas.microsoft.com/.NetConfiguration/v2.0">
+  <configSections>
+      <section name="rewriteSettings" type="RewriteSettings" />
+  </configSections>
+  
 	<appSettings>
 		<add key="Amazon.AWSECommerceService" value="http://soap.amazon.com/onca/soap?Service=AWSECommerceService"/>
 		<add key="encryptConnectionStrings" value="false" />
@@ -10,8 +14,14 @@
 		<remove name="longueurConnectionString"/>
 		<add name="longueurConnectionString" connectionString="Data Source=Stinky;Initial Catalog=Longueur;Integrated Security=True"/>
 	</connectionStrings>
-	
-	<system.web>
+
+  <rewriteSettings>
+    <rewrites>
+      <rule url="/longueur/TheHillellis/(\d+)" rewrite="/longueur/TheHillellis/Permalink.aspx?id=$1" />
+    </rewrites>
+  </rewriteSettings>
+
+  <system.web>   
 		<compilation debug="true">
 			<assemblies>
 				<add assembly="System.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
