Use the rewriter url's when possible. Add FlickrNet and the startings of the photos page.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -60,6 +60,11 @@
       <LookFor>&lt;trace enabled="true" localOnly="true" /&gt;</LookFor>
       <ReplaceWith>&lt;trace enabled="false" /&gt;</ReplaceWith>
     </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\Web.Config</FilePattern>
+      <LookFor>/longueur/TheHillellis/</LookFor>
+      <ReplaceWith>/TheHillellis/</ReplaceWith>
+    </StringReplacement>
   </StringReplacements>
   <FtpPort>21</FtpPort>
   <FtpTimeout>20</FtpTimeout>
@@ -109,7 +114,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-08-22T21:54:18.3236688-04:00</dateTime>
+        <dateTime>2007-08-26T19:30:49.4254496-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -133,7 +138,7 @@
         <string>\bin</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:10.6969504-04:00</dateTime>
+        <dateTime>2007-08-29T22:31:42.0891488-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -229,7 +234,7 @@
         <string>\bin\common.dll</string>
       </key>
       <value>
-        <dateTime>2007-06-24T23:09:17.997448-04:00</dateTime>
+        <dateTime>2007-08-25T18:05:08.0776944-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -245,7 +250,7 @@
         <string>\global.asax</string>
       </key>
       <value>
-        <dateTime>2007-08-14T20:39:14.9271504-04:00</dateTime>
+        <dateTime>2007-08-26T19:30:57.8012176-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -261,7 +266,7 @@
         <string>\web.config</string>
       </key>
       <value>
-        <dateTime>2007-08-14T20:39:15.8484752-04:00</dateTime>
+        <dateTime>2007-08-29T23:06:43.5412368-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -341,7 +346,7 @@
         <string>\controls</string>
       </key>
       <value>
-        <dateTime>2007-08-14T20:38:45.5311568-04:00</dateTime>
+        <dateTime>2007-08-26T19:38:29.256448-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -677,7 +682,7 @@
         <string>\thehillellis</string>
       </key>
       <value>
-        <dateTime>2007-08-22T22:04:29.5898688-04:00</dateTime>
+        <dateTime>2007-08-26T19:38:29.6269808-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -845,7 +850,7 @@
         <string>\thehillellis\thehillellis.master</string>
       </key>
       <value>
-        <dateTime>2007-08-22T22:04:30.2508192-04:00</dateTime>
+        <dateTime>2007-08-26T19:38:32.2006816-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -853,7 +858,7 @@
         <string>\thehillellis\thehillellis.master.cs</string>
       </key>
       <value>
-        <dateTime>2007-08-14T21:38:59.3395744-04:00</dateTime>
+        <dateTime>2007-08-26T19:30:57.0000656-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5333,7 +5338,7 @@
         <string>\thehillellis\js</string>
       </key>
       <value>
-        <dateTime>2007-08-19T17:44:20.8914128-04:00</dateTime>
+        <dateTime>2007-08-25T18:05:02.6999616-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5349,7 +5354,7 @@
         <string>\thehillellis\js\thehillellis.js</string>
       </key>
       <value>
-        <dateTime>2007-08-19T17:44:22.6940048-04:00</dateTime>
+        <dateTime>2007-08-25T18:05:10.6614096-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5461,7 +5466,7 @@
         <string>\controls\blog</string>
       </key>
       <value>
-        <dateTime>2007-08-14T20:38:45.611272-04:00</dateTime>
+        <dateTime>2007-08-26T19:38:29.356592-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5485,7 +5490,7 @@
         <string>\controls\blog\content.ascx</string>
       </key>
       <value>
-        <dateTime>2007-08-14T20:38:57.428264-04:00</dateTime>
+        <dateTime>2007-08-26T19:38:30.7786368-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5509,7 +5514,7 @@
         <string>\thehillellis\feed.ashx</string>
       </key>
       <value>
-        <dateTime>2007-06-13T00:10:33.713928-04:00</dateTime>
+        <dateTime>2007-08-26T19:38:31.4796448-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5742,6 +5747,94 @@
       </key>
       <value>
         <dateTime>2007-08-22T21:54:22.409544-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\rewriteconfiguration</string>
+      </key>
+      <value>
+        <dateTime>2007-08-26T19:30:50.1602304-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\rewriteconfiguration\rewritesettings.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-08-25T18:05:03.761488-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\rewriteconfiguration\ruleelement.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-08-25T18:05:04.6527696-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\rewriteconfiguration\ruleelementcollection.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-08-25T18:05:05.3537776-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\rewriteconfiguration\settingssingleton.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-08-25T18:05:06.2550736-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\rewriteconfiguration\rewritehandler.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-08-26T19:30:52.1931536-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\bin\intelligencia.urlrewriter.dll</string>
+      </key>
+      <value>
+        <dateTime>2007-08-26T19:30:53.7954576-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\photos</string>
+      </key>
+      <value>
+        <dateTime>2007-08-29T23:06:22.6111408-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\bin\flickrnet.dll</string>
+      </key>
+      <value>
+        <dateTime>2007-08-29T22:31:45.4339584-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\photos\default.aspx</string>
+      </key>
+      <value>
+        <dateTime>2007-08-29T23:06:23.3121488-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\photos\default.aspx.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-08-29T23:05:51.3724976-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
