Photos now work.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -266,7 +266,7 @@
         <string>\web.config</string>
       </key>
       <value>
-        <dateTime>2007-08-29T23:06:43.5412368-04:00</dateTime>
+        <dateTime>2007-09-01T11:38:11.82884-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5810,7 +5810,7 @@
         <string>\photos</string>
       </key>
       <value>
-        <dateTime>2007-08-29T23:06:22.6111408-04:00</dateTime>
+        <dateTime>2007-09-01T11:25:52.5310912-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5826,7 +5826,7 @@
         <string>\photos\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-08-29T23:06:23.3121488-04:00</dateTime>
+        <dateTime>2007-09-01T11:25:53.9431216-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5834,7 +5834,31 @@
         <string>\photos\default.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-08-29T23:05:51.3724976-04:00</dateTime>
+        <dateTime>2007-09-01T11:25:54.6441296-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\flickrnetcache</string>
+      </key>
+      <value>
+        <dateTime>2007-09-01T11:25:52.2707168-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\photos\styles.css</string>
+      </key>
+      <value>
+        <dateTime>2007-09-01T11:25:55.3751808-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\photos\web.config</string>
+      </key>
+      <value>
+        <dateTime>2007-09-01T11:25:56.0461456-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
