Add cache to flickr photos. Adjust css.

--- a/longueur/Photos/Web.config
+++ b/longueur/Photos/Web.config
@@ -3,5 +3,6 @@
 	<appSettings>
 		<add key="flickrUid" value="10086551@N05" />
 		<add key="flickrTag" value="Phlog" />
+		<add key="flickrPerPage" value="100" />
 	</appSettings>
 </configuration>
