--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -21,7 +21,7 @@
     <rewrite url="~/longueur/TheHillellis/(\d+)\.aspx" to="/longueur/TheHillellis/Permalink.aspx?id=$1" processing="continue" />
   </rewriter>
 
-  <flickrNet apiKey="70eb32334b9a5dccf760e8428437fc8b" secret="66c465976283b45a" cacheDisabled="true" cacheLocation="e:\hosting\member\adparadox\flickrnetcache" />
+  <flickrNet apiKey="70eb32334b9a5dccf760e8428437fc8b" secret="66c465976283b45a" cacheDisabled="false" cacheLocation="flickrnetcache" />
 
   <system.web>
     <compilation debug="true">
