Disable flickr cache.

--- a/longueur/Web.Config
+++ b/longueur/Web.Config
@@ -12,18 +12,18 @@
     <add key="timezoneDifference" value="0" />
   </appSettings>
 
-  <connectionStrings>
-    <remove name="longueurConnectionString"/>
-    <add name="longueurConnectionString" connectionString="Data Source=Stinky;Initial Catalog=Longueur;Integrated Security=True"/>
-  </connectionStrings>
+	<connectionStrings>
+		<remove name="longueurConnectionString"/>
+		<add name="longueurConnectionString" connectionString="Data Source=Stinky;Initial Catalog=Longueur;Integrated Security=True"/>
+	</connectionStrings>
 
-  <rewriter>
-    <rewrite url="~/longueur/TheHillellis/(\d+)\.aspx" to="/longueur/TheHillellis/Permalink.aspx?id=$1" processing="continue" />
-  </rewriter>
+	<rewriter>
+		<rewrite url="~/longueur/TheHillellis/(\d+)\.aspx" to="/longueur/TheHillellis/Permalink.aspx?id=$1" processing="continue" />
+	</rewriter>
 
-  <flickrNet apiKey="70eb32334b9a5dccf760e8428437fc8b" secret="66c465976283b45a" cacheDisabled="false" cacheLocation="flickrnetcache" />
+	<flickrNet apiKey="70eb32334b9a5dccf760e8428437fc8b" secret="66c465976283b45a" cacheDisabled="true" cacheLocation="flickrnetcache" />
 
-  <system.web>
+	<system.web>
     <compilation debug="true">
       <assemblies>
         <add assembly="System.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
