Encapsulate photos in their own object. Indicate the current photo. Update the homepage.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -65,6 +65,11 @@
       <LookFor>/longueur/TheHillellis/</LookFor>
       <ReplaceWith>/TheHillellis/</ReplaceWith>
     </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\Photos\Default.aspx</FilePattern>
+      <LookFor>//urchinTracker();</LookFor>
+      <ReplaceWith>urchinTracker();</ReplaceWith>
+    </StringReplacement>
   </StringReplacements>
   <FtpPort>21</FtpPort>
   <FtpTimeout>20</FtpTimeout>
@@ -114,7 +119,7 @@
         <string>\app_code</string>
       </key>
       <value>
-        <dateTime>2007-08-26T19:30:49.4254496-04:00</dateTime>
+        <dateTime>2007-09-03T14:25:13.6498896-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5546,7 +5551,7 @@
         <string>\default.html</string>
       </key>
       <value>
-        <dateTime>2007-06-10T21:45:51.5265088-04:00</dateTime>
+        <dateTime>2007-09-03T15:39:49.8842784-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5810,7 +5815,7 @@
         <string>\photos</string>
       </key>
       <value>
-        <dateTime>2007-09-03T09:58:22.1163776-04:00</dateTime>
+        <dateTime>2007-09-03T14:50:43.0444432-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5826,7 +5831,7 @@
         <string>\photos\default.aspx</string>
       </key>
       <value>
-        <dateTime>2007-09-03T09:58:24.1993728-04:00</dateTime>
+        <dateTime>2007-09-03T14:50:44.0058256-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5834,7 +5839,7 @@
         <string>\photos\default.aspx.cs</string>
       </key>
       <value>
-        <dateTime>2007-09-03T09:58:24.9003808-04:00</dateTime>
+        <dateTime>2007-09-03T14:47:55.1017808-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5850,7 +5855,7 @@
         <string>\photos\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-09-03T09:58:25.5913744-04:00</dateTime>
+        <dateTime>2007-09-03T14:47:55.8027888-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5858,7 +5863,39 @@
         <string>\photos\web.config</string>
       </key>
       <value>
-        <dateTime>2007-09-03T09:58:27.6943984-04:00</dateTime>
+        <dateTime>2007-09-03T14:25:22.8531232-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\flickr</string>
+      </key>
+      <value>
+        <dateTime>2007-09-03T14:25:16.1234464-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\flickr\photo.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-09-03T14:25:17.8459232-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\app_code\flickr\photos.cs</string>
+      </key>
+      <value>
+        <dateTime>2007-09-03T14:25:18.5469312-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\styles.css</string>
+      </key>
+      <value>
+        <dateTime>2007-09-03T15:39:50.8857184-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
