Add about page.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -70,6 +70,11 @@
       <LookFor>//urchinTracker();</LookFor>
       <ReplaceWith>urchinTracker();</ReplaceWith>
     </StringReplacement>
+    <StringReplacement>
+      <FilePattern>\about.html</FilePattern>
+      <LookFor>//urchinTracker();</LookFor>
+      <ReplaceWith>urchinTracker();</ReplaceWith>
+    </StringReplacement>
   </StringReplacements>
   <FtpPort>21</FtpPort>
   <FtpTimeout>20</FtpTimeout>
@@ -5551,7 +5556,7 @@
         <string>\default.html</string>
       </key>
       <value>
-        <dateTime>2007-09-03T15:39:49.8842784-04:00</dateTime>
+        <dateTime>2007-09-08T17:06:42.0701664-04:00</dateTime>
       </value>
     </item>
     <item>
@@ -5895,7 +5900,15 @@
         <string>\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-09-03T15:39:50.8857184-04:00</dateTime>
+        <dateTime>2007-09-08T17:06:42.8713184-04:00</dateTime>
+      </value>
+    </item>
+    <item>
+      <key>
+        <string>\about.html</string>
+      </key>
+      <value>
+        <dateTime>2007-09-08T17:07:42.2504256-04:00</dateTime>
       </value>
     </item>
   </UploadLog>
