Fix description position.

--- a/longueur/deploy.config
+++ b/longueur/deploy.config
@@ -5900,7 +5900,7 @@
         <string>\styles.css</string>
       </key>
       <value>
-        <dateTime>2007-09-08T17:06:42.8713184-04:00</dateTime>
+        <dateTime>2007-09-08T19:21:42.960008-04:00</dateTime>
       </value>
     </item>
     <item>
