--- a/SharpFile/SharpFile.csproj
+++ b/SharpFile/SharpFile.csproj
@@ -32,6 +32,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\Common.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -97,6 +98,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="SpinningProgress.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SpinningProgress.Designer.cs">
+      <DependentUpon>SpinningProgress.cs</DependentUpon>
     </Compile>
     <Compile Include="UnitDisplayType.cs" />
   </ItemGroup>
