--- a/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
+++ b/SharpFile/SharpFile.Infrastructure/SharpFile.Infrastructure.csproj
@@ -41,6 +41,7 @@
     <Compile Include="IconHelper.cs" />
     <Compile Include="IconManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShellContextMenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SharpFile.IO\SharpFile.IO.csproj">
