--- a/SharpFile/SharpFile.csproj
+++ b/SharpFile/SharpFile.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Child.cs">
@@ -41,6 +42,9 @@
     </Compile>
     <Compile Include="Child.Designer.cs">
       <DependentUpon>Child.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListView.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Parent.cs">
       <SubType>Form</SubType>
@@ -83,6 +87,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ToolStrip.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UnitDisplayType.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -118,6 +125,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>$(ProjectDir)post_build.bat $(ProjectDir) $(TargetDir)</PostBuildEvent>
+    <PostBuildEvent>rem $(ProjectDir)post_build.bat $(ProjectDir) $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
 </Project>
