--- a/SharpFile/SharpFile.UI/SharpFile.UI.csproj
+++ b/SharpFile/SharpFile.UI/SharpFile.UI.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{96C1D4FB-2A4F-4746-A9C0-C28E491CBB8B}</ProjectGuid>
+    <ProjectGuid>{3896D530-3308-45BC-B802-AE953EDAD227}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharpFile.Infrastructure</RootNamespace>
-    <AssemblyName>SharpFile.Infrastructure</AssemblyName>
+    <RootNamespace>SharpFile.UI</RootNamespace>
+    <AssemblyName>SharpFile.UI</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -29,20 +29,26 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileSystem.cs" />
-    <Compile Include="FileSystemWatcher.cs" />
+    <Compile Include="IconHelper.cs" />
+    <Compile Include="IconManager.cs" />
+    <Compile Include="ImageListDrag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shell32.cs" />
+    <Compile Include="ShellContextMenu.cs" />
+    <Compile Include="SysImageList.cs" />
+    <Compile Include="User32.cs" />
+    <Compile Include="Win32.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SharpFile.IO\SharpFile.IO.csproj">
       <Project>{F9F8A1B7-00C8-411C-8063-987C1F720956}</Project>
       <Name>SharpFile.IO</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SharpFile.UI\SharpFile.UI.csproj">
-      <Project>{3896D530-3308-45BC-B802-AE953EDAD227}</Project>
-      <Name>SharpFile.UI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
